fixed jumping buttons on the what's new page.

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -2307,10 +2307,10 @@ body, table td, select
 .gwt-Button {
   margin: 0;
   border: 0px;
-  padding: 2px 10px;
+  padding: 1px 10px;
   margin-right: 3px;
   text-decoration: none;
-  font-size: 12px;
+  font-size: 11px;
   cursor: pointer;
   cursor: hand;
   background: #949494;
